--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "natours",
   "version": "1.0.0",
   "description": "landing page for natours",
+  "browserslist": "last 10 versions",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
+    "prefix:css": "postcss css/style.concat.css --use autoprefixer -o css/style.prefix.css"
   },
   "author": "sarah",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^8.0.0"
+    "concat": "^1.0.3",
+    "node-sass": "^8.0.0",
+    "postcss-cli": "^10.1.0"
   },
   "dependencies": {
     "live-server": "^1.2.2"
